# qt-sqlite

./: CMakeLists.txt  Main.qml  README.md  databasemanager.cpp  databasemanager.h  main.cpp
